...
                ),
                // Add/Remove Friend Button
                TextButton(
                  key: Key("AddRemoveFriendButtonTestKey"),
                  onPressed: () {},
                  child: Text(
                    isFriend ? "Remove Friend" : "Add Friend",
                    style:
                        TextStyle(color: isFriend ? Colors.grey : Colors.green),
                  ),
                )
              ],
            ),
...
