...
                  ],
                );
              },
            ),
            actions: [
              IconButton(
                icon: const Icon(key:Key("logoutIcon"),Icons.logout, color: Colors.white70),
                onPressed: () {
                  FirebaseAuth.instance.signOut().then((value) =>
                      Navigator.pushNamedAndRemoveUntil(
                          context, Routes.authWrapper, (route) => false));
                },
              ),
...
